full_test/testcases/step11/arr_nlv_2.c
int main(){
    int a[2][3][4];
    int r = 1;
    // for (int i = 0; i < 2; i = i + 1)
    //     for (int j = 0; j < 3; j=j+1) {
    //         a[i][j][0] = i*6-j*3;
    //         for (int k = 1; k < 4; k=k+ 1) {
    //             r = r * 2 + 1;
    //             a[i][j][k] = a[i][j][k-1] + r;
    //         }
    //     } 我们不支持这种写法，因为我们不支持for循环
    // 但是我们支持这种写法：
    int i = 0; // 初始化外层i循环
    while (i < 2)
    {
        int j = 0; // 初始化中层j循环
        while (j < 3)
        {
            a[i][j][0] = i * 6 - j * 3; // 原来最内层循环之前的操作

            int k = 1; // 初始化最内层k循环
            while (k < 4)
            {
                r = r * 2 + 1; // 原来最内层循环的操作
                a[i][j][k] = a[i][j][k - 1] + r;

                k = k + 1; // k循环迭代
            }

            j = j + 1; // j循环迭代
        }

        i = i + 1; // i循环迭代
    }
    return a[1][2][3] + a[0][0][2];
}
